# gpui-engram

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/engram-theme/: Cargo.toml
crates/engram-theme/src/: color_string.rs  colors.rs  default.rs  hot_reload.rs  loader.rs  refineable.rs  refinement.rs  registry.rs  system_appearance.rs  theme.rs
crates/engram-theme/tests/: loader.rs
crates/engram-ui/: Cargo.toml
crates/engram-ui/assets/themes/: engram_dark.json  engram_light.json  gruvbox_dark.json  gruvbox_light.json
crates/engram-ui/src/: assets.rs  components.rs  traits.rs  ui.rs
crates/engram-ui/src/components/: accordion.rs  avatar.rs  banner.rs  breadcrumb.rs  button.rs  callout.rs  checkbox.rs  decorated_icon.rs  description_list.rs  disclosure.rs  divider.rs  dropdown_menu.rs  gradient_fade.rs  hover_card.rs  icon.rs  image.rs  indicator.rs  keybinding.rs  keybinding_hint.rs  list.rs  menu.rs  modal.rs  navigable.rs  pagination.rs  popover.rs  progress.rs  (+14 more)
crates/engram-ui/tests/: render_smoke.rs
crates/engram/examples/: showcase.rs
crates/story/: Cargo.toml
crates/story/src/: layout.rs  stories.rs  story.rs
crates/story/src/stories/: avatar.rs  banner.rs  button.rs  checkbox.rs  chip.rs  disclosure.rs  divider.rs  dropdown_menu.rs  headline.rs  hover_card.rs  icon.rs  icon_button.rs  image.rs  indicator.rs  keybinding.rs  keybinding_hint.rs  label.rs  list.rs  menu.rs  modal.rs  popover.rs  slider.rs  split_button.rs  switch.rs  tab.rs  text_field.rs  tooltip.rs  variable_list.rs  virtual_list.rs
(+13 files in other folders)
